@@ -1,52 +1,87 @@
-<?php
+<?php # $Header: /cvsroot/tikiwiki/tiki/tiki-login.php,v 1.8 2003-01-06 03:45:48 rossta Exp $
+
 // Initialization
 require_once('tiki-setup.php');
 
 /*
-if(!isset($_REQUEST["login"])) {
+if (!isset($_REQUEST["login"])) {
   header("location: $HTTP_REFERER");
   die;  
 }
 */
-$isvalid = false;
-$isdue=false;
-if(($_REQUEST["user"] == 'admin') && (!$userlib->user_exists("admin"))) {
-  if($_REQUEST["pass"]==ADMIN_PASSWORD) {
+
+$https_mode = isset($_SERVER['HTTPS']) && $_SERVER['HTTPS'] == 'on';
+$https_login_required = $tikilib->get_preference('https_login_required', 'n');
+
+if ($https_login_required == 'y' && !$https_mode) {
+	$url = 'https://' . $https_domain;
+	if ($https_port != 443)
+		$url .= ':' . $https_port;
+	$url .= $https_prefix . $tikiIndex;
+	if (SID)
+		$url .= '?' . SID;
+	header("Location " . $url);
+	exit;
+}
+
+$user		= isset($_REQUEST['user'])			? $_REQUEST['user'] : false; 
+$pass		= isset($_REQUEST['pass'])			? $_REQUEST['pass'] : false; 
+$challenge	= isset($_REQUEST['challenge'])		? $_REQUEST['challenge'] : false; 
+$response	= isset($_REQUEST['response'])		? $_REQUEST['response'] : false; 
+$isvalid	= false;
+$isdue		= false;
+
+if ($user == 'admin' && !$userlib->user_exists('admin')) {
+  if ($pass == ADMIN_PASSWORD) {
      $isvalid = true;
-     $userlib->add_user("admin",ADMIN_PASSWORD,'none');
+     $userlib->add_user('admin', ADMIN_PASSWORD, 'none');
   }  
 } else {
-  if(!isset($_REQUEST["challenge"])) $_REQUEST["challenge"]='';
-  if(!isset($_REQUEST["response"])) $_REQUEST["response"]='';
-  $isvalid = $userlib->validate_user($_REQUEST["user"],$_REQUEST["pass"],$_REQUEST["challenge"],$_REQUEST["response"]);
+  $isvalid = $userlib->validate_user($user, $pass, $challenge, $response);
   // If the password is valid but it is due then force the user to change the password by
   // sending the user to the new password change screen without letting him use tiki
   // The user must re-nter the old password so no secutiry risk here
-  if($isvalid) {
-    $isdue=$userlib->is_due($_REQUEST["user"]);
+  if ($isvalid) {
+    $isdue = $userlib->is_due($user);
   }
 }
 
-if($isvalid && $isdue) {
-  // Redirect the user to the screen where he must change his password.
-  // Note that the user is not logged in he's just validated to change his password
-  // The user must re-enter his old password so no secutiry risk involved
-  header("location: tiki-change_password.php?user=".$_REQUEST["user"]."&amp;oldpass=".$_REQUEST["pass"]);
-  die;
+if ($isvalid) {
+  if ($isdue) {
+    // Redirect the user to the screen where he must change his password.
+    // Note that the user is not logged in he's just validated to change his password
+    // The user must re-enter his old password so no secutiry risk involved
+    $url = 'tiki-change_password.php?user='. urlencode($user) . '&amp;oldpass=' . urlencode($pass);
+  } else {
+    //session_register('user',$user);
+    $_SESSION['user'] = $user;
+    $smarty->assign_by_ref('user', $user);
+    $url = $tikiIndex;
+  }
+} else {
+  $url = 'tiki-error.php?error=' . urlencode(tra('Invalid username or password'));
 }
 
-if($isvalid) {
-  //session_register("user",$_REQUEST["user"]);
-  $_SESSION["user"]=$_REQUEST["user"];
-  $user = $_REQUEST["user"];
-  $smarty->assign_by_ref('user',$user);
-  header("location: $tikiIndex");
-  die;
-} else {
-  $error=tra("Invalid username or password");
-  header("location: tiki-error.php?error=$error");
-  die;  
-  
-  
+if ($https_mode) {
+	$stay_in_ssl_mode = isset($_REQUEST['stay_in_ssl_mode']) && $_REQUEST['stay_in_ssl_mode'] == 'on';
+
+	if (!$stay_in_ssl_mode) {
+		$http_domain = $tikilib->get_preference('http_domain', false);
+		$http_port = $tikilib->get_preference('http_port', 80);
+		$http_prefix = $tikilib->get_preference('http_prefix', '/');
+
+		if ($http_domain) {
+			$prefix = 'http://' . $http_domain;
+			if ($http_port != 80)
+				$prefix .= ':' . $http_port;
+			$prefix .= $https_prefix;
+			$url = $prefix . $url;
+			if (SID)
+				$url .= '?' . SID;
+		}
+	}
 }
+
+header('location: ' . $url);
+exit;
 ?>
